[refactor] use generics to make code easier to write
svn path=/trunk/eXist/; revision=18176